--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -8,6 +8,9 @@
 	--gray500: hsl(210, 6%, 60%);
 	--gray700: hsl(210, 6%, 40%);
 	--gray900: hsl(210, 6%, 18%);
+	--red300: hsl(0, 60%, 60%);
+	--red500: hsl(0, 60%, 50%);
+	--red700: hsl(0, 60%, 40%);
 }
 
 body {
@@ -19,7 +22,8 @@ body {
 
 	color: var(--gray900);
 	font-size: 30px;
-	font-family: 'Karla', sans-serif;
+	font-family: 'Open Sans', sans-serif;
+
 	@media screen and (max-width: 500px) {
 		font-size: 7vw;
 	}
@@ -54,20 +58,24 @@ body {
 }
 
 section#header {
+	font-family: 'Assistant', sans-serif;
+
 	h1 {
 		font-size: 2.3em;
 		margin: 0;
+		font-weight: 700;
 		@media screen and (max-width: 500px) {
-			font-size: 11vw;
+			font-size: 11.6vw;
 		}
 	}
+
 	h3 {
-		font-size: .9em;
+		font-size: .95em;
 		margin: 0;
 		color: var(--gray400);
-		font-weight: normal;
+		font-weight: 600;
 		@media screen and (max-width: 500px) {
-			font-size: 4.4vw;
+			font-size: 4.8vw;
 		}
 	}
 }
@@ -88,12 +96,16 @@ section#price-input {
 		&::placeholder {
 			color: var(--gray300);
 		}
+		&.invalid {
+			color: var(--red300);
+			border-color: var(--red300);
+		}
 	}
 }
 section#result {
 	margin-top: 70px;
 	font-size: 1.3em;
-	font-weight: bold;
+	font-weight: 700;
 	word-break: break-all;
 }
 
